--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,7 +8,9 @@ authors = ["Philipp Oppermann <dev@phil-opp.com>",
 crate-type = ["staticlib"]
 
 [dependencies]
-rlibc = "1.0"
-volatile = "0.1.0"
-spin = "0.4.5"
+bitflags = "0.7.0"
 multiboot2 = "0.1.0"
+rlibc = "1.0"
+spin = "0.4.5"
+volatile = "0.1.0"
+x86_64 = "0.1.2"
